# JupyterBook-Patches

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/jupyterbook_patches/: __init__.py
src/jupyterbook_patches/patches/: download_patch.py  fix_hash_jump.py  layout.py  margin_patch.py  mathjax_patch.py  preserve_dropdown_state.py
src/jupyterbook_patches/patches/_static/: fix_code_header_style.css  fix_margin.css  fix_margin.scss  fix_sidebar_scroll.css  margin_patch.css  mathjax_patch.css
